[package]
name = "orbtk_backend"
version = "0.1.0"
authors = ["arctic-alpaca <67190338+arctic-alpaca@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters-backend = "0.3.*"#plotters-backend = {path = "../plotters-backend"}
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }

[dev-dependencies]
plotters = {version = "^0.3.0"}#plotters = {path = "../plotters"}